--- a/tuckshop/css/styles.css
+++ b/tuckshop/css/styles.css
@@ -1,5 +1,5 @@
-.MainHeading {
-	font-family: 'Ubuntu', sans-serif;
+#brand-name-lpu {
+	font-family: 'Indie Flower', cursive;
 	text-transform: uppercase;
 	font-size: 30px;
 	text-shadow: 1px 1px;
@@ -11,6 +11,7 @@
 		margin: 65px 0px 10px 5px;
 	}
 }
+
 
 .glyphicon {
 	text-align: center;
@@ -36,9 +37,73 @@
 
 .li_a {
 	text-align: center;
+	color: black;
 }
 
 .jumb-obj {
 	height: 450px !important;
 	overflow: hidden;
+}
+
+.block-input {
+	margin-top: 5rem;
+	top: 50%;
+}
+
+#nearest-block-got {
+	width: 100%;
+	text-align: center;
+}
+
+@media (min-width: 501px) {
+	.block-input {
+		width: 50%;
+		left: 25%;
+	}
+
+	.alert {
+		margin: 1.5rem 25% 0rem;
+		width: 50%;
+	}
+}
+
+@media (max-width: 500px) {
+	.block-input {
+		width: 100%;
+	}
+	.alert {
+		width: 100% !important;
+		margin-left: 0px !important;
+	}
+}
+
+.alert {
+	margin: 1.5rem 25% 0rem;
+	width: 50%;
+}
+
+#locate-mark {
+	font-size: 3rem;
+}
+
+body {
+	background: url('../assets/body-bg.png') no-repeat center;
+}
+
+.options-list {
+	color: black;
+}
+
+#navbar-logo {
+	width: 525px;
+	height: 80px;
+}
+
+.navbar-default {
+	background-color: #fff !important;
+}
+
+.text-info-style {
+	text-align: center;
+	margin-top: 5rem;
 }
