logo problem fixed for all pagess

--- a/vishal/css/styles.css
+++ b/vishal/css/styles.css
@@ -56,6 +56,14 @@
 	#lpu-bn {
 		font-size: 3rem !important;
 	}
+
+	#brand-name-lpu {
+		margin-top: 0.6rem !important;
+	}
+}
+
+#brand-name-lpu {
+	margin-top: 1rem;
 }
 
 .li_a {
