Vector images added to site

--- a/59/css/items/styles.css
+++ b/59/css/items/styles.css
@@ -37,3 +37,15 @@
 .mc {
 	background: url('../../assets/items/microcontroller.jpg') no-repeat center;
 }
+
+.choco {
+	background: url('../../assets/items/chocolates.jpg') no-repeat center;
+}
+
+.grids {
+background: url('../../assets/items/grid-sheets.jpg') no-repeat center;
+}
+
+.arch {
+background: url('../../assets/items/arch-sheets.jpg') no-repeat center;
+}
